--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,5 +1,6 @@
+Here are the BookLists created before:
 <ol>
 {{#each booklists as |a|}}
-<ul>{{name}} - [<a href="/booklist/{{slug}}">details</a>]</ul>
+<ul><b>{{name}}</b> - [<a href="/booklist/{{slug}}">details</a>]</ul> <br>
 {{/each}}
 </ol>
