--- a/src/views/booklist-detail.hbs
+++ b/src/views/booklist-detail.hbs
@@ -1,8 +1,17 @@
 <h2>{{bookList.name}}</h2>
 <br>
 <div class = "booklist">
-Posted by: {{bookList.user.username}}<br>
-Description: <br>
-{{bookList.description}}<br>
-Book Lists: <br>
-{{booklist.items}}</div>
+    <b>Created BY:</b> <u>{{bookList.user.username}}</u><br>
+    <br>
+    <b>Created AT:</b> {{bookList.createdAt}}<br>
+    <br>
+    <b>Booklist Description:</b> <br>
+    <div class = "listdesc">
+        {{bookList.description}}<br>
+    </div>
+    <br>
+    <b>BOOKS:</b> <br>
+    <div class = "listdesc">
+        {{booklist.items}}
+    </div>
+</div>
