--- a/src/views/layout.hbs
+++ b/src/views/layout.hbs
@@ -10,7 +10,7 @@
 	<div id="outer">
 		<header>
 			<nav>
-				<span class="home-link"><a href="/">Home</a> {{#if user}}| <a href="/booklist/add">Add</a>{{/if}}</span>
+				<span class="home-link"><a href="/">Home</a> {{#if user}}| <a href="/booklist/add">Add Booklist</a>{{/if}}</span>
 				<span class="login-status">
 					{{#if user}}
 					Logged in as: {{user.username}}
@@ -21,10 +21,9 @@
 			</nav>
 		</header>
 
-		<h1>Personal Library Management System</h1>
+		<h1 class="head">Personal Library Management System</h1>
 		<br>
 		<div class="content">
-			Here are the BookLists created before:
 			{{{ body }}}
 		</div>
 	</div>
