--- a/src/views/booklist-detail.hbs
+++ b/src/views/booklist-detail.hbs
@@ -10,7 +10,9 @@
         {{bookList.description}}<br>
     </div>
     <br>
-    <b>BOOKS:</b> <br>
+    <b>BOOKS:</b> 
+    <a href="/booklist/{{bookList.name}}/addbook">Add Book</a>
+    <br>
     <div class = "listdesc">
         {{booklist.items}}
     </div>
