--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -14,4 +14,14 @@
 	<div>
 		<input type="submit" value="Login">
 	</div>
+{{!-- <form action="/login/password" method="post">
+    <section>
+        <label for="username">Username</label>
+        <input id="username" name="username" type="text" autocomplete="username" required autofocus>
+    </section>
+    <section>
+        <label for="current-password">Password</label>
+        <input id="current-password" name="password" type="password" autocomplete="current-password" required>
+    </section>
+    <button type="submit">Sign in</button> --}}
 </form>
