--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,6 +1,6 @@
 Here are the BookLists created before:
 <ol>
 {{#each booklists as |a|}}
-<ul><b>{{name}}</b> - [<a href="/booklist/{{slug}}">details</a>]</ul> <br>
+<ul><b>{{name}}</b> - <a href="/booklist/{{slug}}"><button>details</button></a></ul> <br>
 {{/each}}
 </ol>
