--- a/src/views/layout.hbs
+++ b/src/views/layout.hbs
@@ -10,7 +10,7 @@
 	<div id="outer">
 		<header>
 			<nav>
-				<span class="home-link"><a href="/">Home</a> {{#if user}}| <a href="/booklist/add">Add Booklist</a>{{/if}}</span>
+				<span class="home-link"><a href="/">Home</a> {{#if user}}| <a href="/booklist/add">Add Booklist</a> | <a href="/passwordReset">Reset Password</a>{{/if}}</span>
 				<span class="login-status">
 					{{#if user}}
 					Logged in as: {{user.username}}
