--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,6 +1,6 @@
-Here are the BookLists created before:
+<h4>Here are the BookLists created before:</h4>
 <ol>
 {{#each booklists as |a|}}
-<ul><b>{{name}}</b> - <a href="/booklist/{{slug}}"><button>details</button></a></ul> <br>
+<ul><b>{{name}}</b> - <a href="/booklist/{{slug}}"><button class="btn btn-outline-info" id = "detail">details</button></a></ul>
 {{/each}}
 </ol>
