--- a/src/views/password-reset.hbs
+++ b/src/views/password-reset.hbs
@@ -1,21 +1,21 @@
- <h2>Login</h2>
+ <h2>Password Reset</h2>
 {{#if message}}
 <div class="error">{{ message }}</div>
 {{/if}}
 <form method="POST" action="">
 	<div>
 		<label for="oldpswd">Old Password:</label>
-		<input type="text" name="oldpswd" value="">
+		<input class="form-control" type="text" name="oldpswd" value="">
 	</div>
 	<div>
 		<label for="newpswd1">New Password:</label> 
-		<input type="password" name="newpswd1" value="">
+		<input class="form-control" type="password" name="newpswd1" value="">
 	</div>
     <div>
 		<label for="newpswd2">Confirm New Password:</label> 
-		<input type="password" name="newpswd2" value="">
+		<input class="form-control" type="password" name="newpswd2" value="">
 	</div>
 	<div>
-		<input type="submit" value="Set Password">
+		<input class="btn btn-primary" type="submit" value="Set Password">
 	</div>
 </form>
