--- a/src/views/register.hbs
+++ b/src/views/register.hbs
@@ -5,11 +5,11 @@
 <form method="POST" action="register">
 	<div>
 		<label for="username">Username:</label>
-		<input type="text" name="username" value="">
+		<input type="text" class="form-control" name="username" value="">
 	</div>
 	<div>
 		<label for="password">Password:</label>
-		<input type="password" name="password" value="">
+		<input type="text" class="form-control" name="password" value="">
 	</div>
-	<div><input type="submit" value="Register"></div>
+	<div><input class="btn btn-primary" type="submit" value="Register"></div>
 </form>
