--- a/src/views/booklist-add.hbs
+++ b/src/views/booklist-add.hbs
@@ -5,7 +5,7 @@
 <form method="POST" action="">
 	<div>
 		<label for="Name">Name:</label>
-		<input type="text" id="name" name="name" value= "">
+		<input class="form-control" type="text" id="name" name="name" value= "">
 	</div>
 	{{!-- <div>
 		<label for="title">URL:</label>
@@ -13,7 +13,7 @@
 	</div> --}}
 	<div>
 		<label for="description">Description:</label>
-		<textarea name="description" id="description"></textarea>
+		<textarea class="form-control" name="description" id="description"></textarea>
 	</div>
-	<input type="submit" value="Add">
+	<input class="d-grid col-2 mx-auto btn btn-primary" type="submit" value="Add">
 </form>
