--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -5,14 +5,14 @@
 <form method="POST" action="login">
 	<div>
 		<label for="username">Username:</label>
-		<input type="text" name="username" value="">
+		<input class="form-control" type="text" name="username" value="">
 	</div>
 	<div>
 		<label for="password">Password:</label> 
-		<input type="password" name="password" value="">
+		<input class="form-control" type="password" name="password" value="">
 	</div>
 	<div>
-		<input type="submit" value="Login">
+		<input class="btn btn-primary" type="submit" value="Login">
 	</div>
 {{!-- <form action="/login/password" method="post">
     <section>
