--- a/src/views/layout.hbs
+++ b/src/views/layout.hbs
@@ -14,12 +14,12 @@
 	<div id="outer">
 		<header>
 			<nav>
-				<span class="home-link"><a href="/">Home</a> {{#if user}}| <a href="/booklist/add">Add Booklist</a> | <a href="/passwordReset">Reset Password</a>{{/if}}</span>
+				<span class="home-link"><a href="/" class="btn btn-primary">Home</a> {{#if user}}| <a href="/booklist/add" class="btn btn-primary">Add Booklist</a> | <a href="/passwordReset" class="btn btn-primary">Reset Password</a>{{/if}}</span>
 				<span class="login-status">
 					{{#if user}}
-					Logged in as: {{user.username}}
+					<div class="login-info">Logged in as: {{user.username}}</div>
 					{{else}}
-					<a href="/register">Register</a> or <a href="/login">Login</a>
+					<a href="/register" class="btn btn-primary">Register</a> | <a href="/login" class="btn btn-primary">Login</a>
 					{{/if}}
 				</span>
 			</nav>
