--- a/src/public/css/site.css
+++ b/src/public/css/site.css
@@ -54,7 +54,7 @@ h1, h2 {
 #outer {
 	/* width: 1200px; */
 	height: 120vh;
-	background-color: #fff;
+	background-color: rgb(221, 255, 251);;
 	margin: auto;
 	text-align: center;
 }
