--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,6 +1,10 @@
 <h4>Here are the BookLists created before:</h4>
-<ol>
-{{#each booklists as |a|}}
-<ul><b>{{name}}</b> - <a href="/booklist/{{slug}}"><button class="btn btn-outline-info" id = "detail">details</button></a></ul>
-{{/each}}
-</ol>
+{{#if status}}
+    <h5>ooops... No record yet :D</h5>
+{{else}}
+    <ol>
+    {{#each booklists as |a|}}
+    <ul><b>{{name}}</b> - <a href="/booklist/{{slug}}"><button class="btn btn-outline-info" id = "detail">details</button></a></ul>
+    {{/each}}
+    </ol>
+{{/if}}
