--- a/src/views/book-add.hbs
+++ b/src/views/book-add.hbs
@@ -9,7 +9,7 @@
 <form method="POST" action="">
 <div>
     <label for="Title">Title:</label>
-    <input  class="form-control" type="text" id="title" name="title" value= "">
+    <input  class="form-control" type="text" id="title" name="title" value= "" required>
 </div>
 <div>
     <label for="Time">Read Date:</label>
