--- a/src/views/booklist-add.hbs
+++ b/src/views/booklist-add.hbs
@@ -5,7 +5,7 @@
 <form method="POST" action="">
 	<div>
 		<label for="Name">Name:</label>
-		<input class="form-control" type="text" id="name" name="name" value= "">
+		<input class="form-control" type="text" id="name" name="name" value= "" required>
 	</div>
 	<div>
 		<label for="description">Description:</label>
