Added code comments

--- a/src/views/book-add.hbs
+++ b/src/views/book-add.hbs
@@ -29,6 +29,9 @@
 </div>
     
 <label for="Comment">Plan to Read Again?</label>
+
+{{!-- Reference:
+https://getbootstrap.com/docs/5.0/forms/checks-radios/#switches --}}
 <div class="form-check form-switch">
     <input id="switc" class="form-check-input" name = "check" type="checkbox" id="flexSwitchCheckDefault">
 </div>
