fixing spacing bugs

--- a/src/views/booklist-edit.hbs
+++ b/src/views/booklist-edit.hbs
@@ -7,7 +7,7 @@
 <form method="POST" action="">
 <div>
     <label for="Name">Name:</label>
-    <input class="form-control" type="text" id="name" name="name" value= {{booklist.name}}>
+    <input class="form-control" type="text" id="name" name="name" value= "{{booklist.name}}">
 </div>
 <div>
     <label for="Description">Description:</label>
