--- a/src/views/book-detail-edit.hbs
+++ b/src/views/book-detail-edit.hbs
@@ -9,7 +9,7 @@
 <form method="POST" action="">
 <div>
     <label for="Title">Title:</label>
-    <input class="form-control" type="text" id="title" name="title" value= {{book.title}}>
+    <input class="form-control" type="text" id="title" name="title" value= "{{book.title}}">
 </div>
 <div>
     <label for="Time">Read Date:</label>
